# retsim-pytorch

./: LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  publish.yml
src/retsim_pytorch/: __about__.py  __init__.py  retsim.py
src/retsim_pytorch/converter/: __init__.py  retsim_converter.py
src/retsim_pytorch/modules/: __init__.py  activations.py  gau.py  metric_embedding.py  norm.py  pooling.py  positional_embeddings.py
src/retsim_pytorch/preprocessing/: __init__.py  binarizer.py
tests/: test_activations.py  test_binarizer.py  test_converter.py  test_gau.py  test_metric_embedding.py  test_norm.py  test_pooling.py  test_positional_embeddings.py  test_retsim.py
weights/: model.safetensors
weights/original/: README.md
