[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retsim-pytorch"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Lukas Kreussel", email = "65088241+LLukas22@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "torch>=2.0.0"
]

[project.optional-dependencies]
convert=[
    "keras==2.15.0",
    "tensorflow==2.15.0",
    "safetensors==0.4.2"
]

test=[
    "pytest>=8.0.0",
    "keras==2.15.0",
    "tensorflow==2.15.0",
    "onnxruntime==1.17.1",
    "safetensors==0.4.2",
    "retvec==1.0.1",
    "tensorflow-similarity==0.17.1"
]

[project.urls]
Documentation = "https://github.com/LLukas22/retsim-pytorch#readme"
Issues = "https://github.com/LLukas22/retsim-pytorch/issues"
Source = "https://github.com/LLukas22/retsim-pytorch"

[tool.hatch.version]
path = "src/retsim_pytorch/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/retsim_pytorch tests}"

[tool.coverage.run]
source_pkgs = ["retsim_pytorch", "tests"]
branch = true
parallel = true
omit = [
  "src/retsim_pytorch/__about__.py",
]

[tool.coverage.paths]
retsim_pytorch = ["src/retsim_pytorch", "*/retvec-retsim_pytorch/src/retsim_pytorch"]
tests = ["tests", "*/retvec-pytorch/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
